가입대기 중 수정