@@ -14,6 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -104,23 +105,54 @@ public class UserService {
         userRepository.deleteById(email);
     }
 
-    // 가입 대기 사용자 전체 조회 (최신순)
+//    // 가입 대기 사용자 전체 조회 (최신순)
+//    public List<PendingUserSummaryResponse> getPendingUsersSummary() {
+//        List<User> pendingUsers = userRepository.findAllByStatusOrderByCreatedAtDesc("가입 대기 중");
+//        return pendingUsers.stream()
+//                .map(PendingUserSummaryResponse::fromEntity)
+//                .toList();
+//    }
+//
+//    // 가입 대기 사용자 상세 조회
+//    public PendingUserDetailResponse getPendingUserDetail(String email) {
+//        User user = userRepository.findByEmail(email)
+//                .orElseThrow(() -> new RuntimeException("해당 사용자를 찾을 수 없습니다: " + email));
+//        if (!"가입 대기 중".equals(user.getStatus())) {
+//            throw new RuntimeException("해당 사용자는 가입 대기 상태가 아닙니다.");
+//        }
+//        return PendingUserDetailResponse.fromEntity(user);
+//    }
+
+    // UserService.java 주요 부분 예시
     public List<PendingUserSummaryResponse> getPendingUsersSummary() {
-        List<User> pendingUsers = userRepository.findAllByStatusOrderByCreatedAtDesc("가입 대기 중");
-        return pendingUsers.stream()
-                .map(PendingUserSummaryResponse::fromEntity)
-                .toList();
+        return userRepository.findByStudentCertifiedTrue().stream()
+                .filter(user -> "가입 대기 중".equals(user.getStatus()))
+                .map(user -> new PendingUserSummaryResponse(
+                        user.getEmail(),
+                        user.getName(),
+                        user.getStudents(),
+                        user.getYear(),
+                        user.getDepartment()
+                ))
+                .collect(Collectors.toList());
     }
 
-    // 가입 대기 사용자 상세 조회
     public PendingUserDetailResponse getPendingUserDetail(String email) {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("해당 사용자를 찾을 수 없습니다: " + email));
-        if (!"가입 대기 중".equals(user.getStatus())) {
-            throw new RuntimeException("해당 사용자는 가입 대기 상태가 아닙니다.");
+                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다."));
+        if (!user.isStudentCertified() || !"가입 대기 중".equals(user.getStatus())) {
+            throw new RuntimeException("인증된 가입 대기 유저가 아닙니다.");
         }
-        return PendingUserDetailResponse.fromEntity(user);
+        return new PendingUserDetailResponse(
+                user.getEmail(),
+                user.getName(),
+                user.getStudents(),
+                user.getYear(),
+                user.getDepartment(),
+                user.getStudentCardImagePath()
+        );
     }
+
 
     @Transactional
     public User saveUser(User user) {
@@ -129,6 +161,8 @@ public class UserService {
         logger.info("[UserService] 저장 후 상태: {}", savedUser.getStatus());
         return savedUser;
     }
+
+
 
 
 }
